Add maven configuration